.provarCaches/00D410000011HE0EAM/objects/rstkf__glayproj__c.object
<CustomObject>
    <description>glayproj__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glayproj_glaydiv__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; IF(ISBLANK(rstkf__glayproj_glproj__c), &apos;&apos;, IF(ISBLANK(rstkf__glayproj_glproj__r.rstkf__glproj_proj__c),&apos;HOMEPROJ&apos;,rstkf__glayproj_glproj__r.rstkf__glproj_proj__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_glaydiv__c</fullName>
        <label>glaydiv</label>
        <referenceTo>rstkf__glaydiv__c</referenceTo>
        <relationshipLabel>glayprojs</relationshipLabel>
        <relationshipName>glayprojs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_glproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Project Master</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>glayprojs</relationshipLabel>
        <relationshipName>glayprojs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_mp00cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period00 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_mp00dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period00 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_mp01cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period01 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_mp01dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period01 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_mp02cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period02 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_mp02dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period02 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_p00cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Z_Obsolete_Period00 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_p00dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Z_Obsolete_Period00 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_p00net__c</fullName>
        <formula>rstkf__glayproj_mp00dr__c - rstkf__glayproj_mp00cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period00 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_p01cr__c</fullName>
        <label>Z_Obsolete_Period01 Credit</label>
        <summarizedField>rstkf__gltxn__c.rstkf__gltxn_cramt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__gltxn__c.rstkf__gltxn_period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__gltxn__c.rstkf__gltxn_glayproj__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_p01dr__c</fullName>
        <label>Z_Obsolete_Period01 Debit</label>
        <summarizedField>rstkf__gltxn__c.rstkf__gltxn_dramt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__gltxn__c.rstkf__gltxn_period__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__gltxn__c.rstkf__gltxn_glayproj__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_p01net__c</fullName>
        <formula>rstkf__glayproj_mp01dr__c - rstkf__glayproj_mp01cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period01 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_p02cr__c</fullName>
        <label>Z_Obsolete_Period02 Credit</label>
        <summarizedField>rstkf__gltxn__c.rstkf__gltxn_cramt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__gltxn__c.rstkf__gltxn_period__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__gltxn__c.rstkf__gltxn_glayproj__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_p02dr__c</fullName>
        <label>Z_Obsolete_Period02 Debit</label>
        <summarizedField>rstkf__gltxn__c.rstkf__gltxn_dramt__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__gltxn__c.rstkf__gltxn_period__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__gltxn__c.rstkf__gltxn_glayproj__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj_p02net__c</fullName>
        <formula>rstkf__glayproj_mp02dr__c - rstkf__glayproj_mp02cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period02 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>glayproj</label>
    <listViews>
        <fullName>rstkf__RS_GLAYPROJ</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__glayproj_p00net__c</columns>
        <columns>rstkf__glayproj_p01net__c</columns>
        <columns>rstkf__glayproj_p02net__c</columns>
        <columns>rstkf__glayproj_p03net__c</columns>
        <columns>rstkf__glayproj_p04net__c</columns>
        <columns>rstkf__glayproj_p05net__c</columns>
        <columns>rstkf__glayproj_p06net__c</columns>
        <columns>rstkf__glayproj_p07net__c</columns>
        <columns>rstkf__glayproj_p08net__c</columns>
        <columns>rstkf__glayproj_p09net__c</columns>
        <columns>rstkf__glayproj_p10net__c</columns>
        <columns>rstkf__glayproj_p11net__c</columns>
        <columns>rstkf__glayproj_p12net__c</columns>
        <filterScope>Everything</filterScope>
        <label>GLAYPROJ</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>glayprojs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>